// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/integrations/InstalledOutgoingWebhook Should match snapshot of makeDisplayName 1`] = `
<strong
  class="item-details__name"
>
  hook display name
</strong>
`;

exports[`components/integrations/InstalledOutgoingWebhook Should match snapshot of makeDisplayName 2`] = `
<strong
  class="item-details__name"
>
  channel display name
</strong>
`;

exports[`components/integrations/InstalledOutgoingWebhook Should match snapshot of makeDisplayName 3`] = `
<strong
  class="item-details__name"
>
  A Private Webhook
</strong>
`;

exports[`components/integrations/InstalledOutgoingWebhook should match snapshot 1`] = `
<div>
  <div
    class="backstage-list__item"
  >
    <div
      class="item-details"
    >
      <div
        class="item-details__row d-flex flex-column flex-md-row justify-content-between"
      >
        <strong
          class="item-details__name"
        >
          build
        </strong>
        <div
          class="item-actions"
        >
          <button
            class="style--none color--link"
          >
            Regenerate Token
          </button>
           - 
          <a
            href="/test/integrations/outgoing_webhooks/edit?id=7h88x419ubbyuxzs7dfwtgkffr"
          >
            Edit
          </a>
           - 
          <button>
            Delete
          </button>
        </div>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__description"
        >
          build status
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__content_type"
        >
          Content-Type: application/x-www-form-urlencoded
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__trigger-words"
        >
          Trigger Words: build
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__trigger-when"
        >
          Trigger When: 
          First word matches a trigger word exactly
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__token"
        >
          Token: 
          <code>
            xoxz1z7c3tgi9xhrfudn638q9r
          </code>
          <button
            aria-label="Copy Token"
            class="_icon-button_mytxt_2 _icon-button--size-x-small_mytxt_55 ml-2"
            data-testid="copyText"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_mytxt_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-12_1i355_30"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__creation"
        >
          Created by some-user on Wednesday, October 18, 2017
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__url word-break--all"
        >
          Callback URLs: http://adsfdasd.com
        </span>
      </div>
    </div>
  </div>
</div>
`;
